# simpleft

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md  TX.cpp  TX.h  main.cpp  makefile
.github/workflows/: cmake-multi-platform.yml
source/: CMakeLists.txt  RX.cpp  RX.h  TX.cpp  TX.h  TX.hpp  Transceiver.cpp  crypto.cpp  crypto.h  main.cpp  makefile  misc.cpp  misc.h  mystruct.h
source/include/: Crypto.hpp  Logging.hpp  NetworkUtility.hpp  Packet.hpp  RX.hpp  TX.hpp  Transceiver.hpp  misc.hpp  sft_constants.hpp
source/include/cli/: ArgParser.hpp  CmdArgs.hpp  IpFlag.hpp  PassphraseFlag.hpp  PortFlag.hpp
source/lib/monocypher/: README.md  monocypher.c
source/lib/tweetnacl/: README.md  randombytes.c
source/src/: Crypto.cpp  Logging.cpp  NetworkUtility.cpp  Packet.cpp  RX.cpp  TX.cpp  Transceiver.cpp  main.cpp  misc.cpp
source/src/cli/: ArgParser.cpp  IpFlag.cpp  PassphraseFlag.cpp  PortFlag.cpp
source/src/crypto/: Crypto_libsodium.cpp  Crypto_monocypher.cpp  Crypto_tweetnacl.cpp
